examples/invalid/17_existential_struct_missing_witness.lane
module Examples.Invalid17
// invalid: struct literals must provide every existential type witness
pub struct Hide {
  type T : Type
  val : T
}

pub let bad : Hide = Hide::{ val: 1 }
